--- a/trunk/MvvmTest/MvvmTest.csproj
+++ b/trunk/MvvmTest/MvvmTest.csproj
@@ -76,7 +76,8 @@
     <Compile Include="Common\TypeServiceTest.cs" />
     <Compile Include="PropertyChangedCounter.cs" />
     <Compile Include="Screens\ScreenCreationBehaviorTest.cs" />
-    <Compile Include="Stubs\ViewModelBehaviorContextStub.cs" />
+    <Compile Include="Stubs\BehaviorContextStub.cs" />
+    <Compile Include="Stubs\ServiceLocatorStub.cs" />
     <Compile Include="Stubs\ViewModelStub.cs" />
     <Compile Include="Stubs\VMDescriptorStub.cs" />
     <Compile Include="Stubs\VMPropertyBaseStub.cs" />
@@ -84,15 +85,17 @@
     <Compile Include="TestUtils\ComparisonObject.cs" />
     <Compile Include="TestUtils\ComparisonObjectTests.cs" />
     <Compile Include="ViewModels\- No Namespace -\VMCollectionTests.cs" />
+    <Compile Include="ViewModels\Core\Behaviors\PropertyBehaviors\RefreshableValueCacheBehaviorTests.cs" />
+    <Compile Include="ViewModels\Core\Behaviors\PropertyBehaviors\ValueCacheBehaviorTests.cs" />
     <Compile Include="ViewModels\Core\BehaviorTestBase.cs" />
     <Compile Include="ViewModels\Core\Builder\BehaviorsTest.cs" />
     <Compile Include="ViewModels\Core\Builder\VMPropertyFactoryTests.cs" />
     <Compile Include="ViewModels\Core\Collections\AddNewHelperTests.cs" />
-    <Compile Include="ViewModels\Core\Collections\Behaviors\CollectionChangeNotificationBehaviorTests.cs" />
-    <Compile Include="ViewModels\Core\Collections\Behaviors\CollectionModificationBehaviorTestBase.cs" />
-    <Compile Include="ViewModels\Core\Collections\Behaviors\CollectionPopulatorBehaviorTests.cs" />
-    <Compile Include="ViewModels\Core\Collections\Behaviors\CollectionSynchronizerBehaviorTests.cs" />
-    <Compile Include="ViewModels\Core\Collections\Behaviors\CollectionParentSetterBehaviorTests.cs" />
+    <Compile Include="ViewModels\Core\Collections\CollectionBehaviors\CollectionChangeNotificationBehaviorTests.cs" />
+    <Compile Include="ViewModels\Core\Collections\CollectionBehaviors\CollectionModificationBehaviorTestBase.cs" />
+    <Compile Include="ViewModels\Core\Collections\CollectionBehaviors\CollectionPopulatorBehaviorTests.cs" />
+    <Compile Include="ViewModels\Core\Collections\CollectionBehaviors\CollectionSynchronizerBehaviorTests.cs" />
+    <Compile Include="ViewModels\Core\Collections\CollectionBehaviors\CollectionParentSetterBehaviorTests.cs" />
     <Compile Include="ViewModels\Core\Collections\VMCollectionTestBase.cs" />
     <Compile Include="ViewModels\Core\PropertyBehaviors\CollectionValidationBehaviorTest.cs" />
     <Compile Include="ViewModels\Core\PropertyBehaviors\DefaultManualUpdateBehaviorTest.cs" />
@@ -131,7 +134,7 @@
     <Compile Include="Screens\ScreenTest.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="ViewModels\Behaviors\BehaviorsTest.cs" />
-    <Compile Include="ViewModels\Behaviors\CollectionFactoryTest.cs" />
+    <Compile Include="ViewModels\Core\Collections\PropertyBehaviors\CollectionFactoryBehaviorTests.cs" />
     <Compile Include="ViewModels\Behaviors\CollectionPopulatorTest.cs" />
     <Compile Include="ViewModels\Behaviors\DisplayValueAccessorBehaviorTest.cs" />
     <Compile Include="ViewModels\CommandPropertyTest.cs" />
@@ -139,7 +142,7 @@
     <Compile Include="ViewModels\Behaviors\VMPropertyTest.cs" />
     <Compile Include="ViewModels\Core\Behaviors\BehaviorConfigurationTest.cs" />
     <Compile Include="ViewModels\Core\Builder\VMPropertyFactoryTest.cs" />
-    <Compile Include="ViewModels\Core\PropertyBehaviors\ViewModelFactoryBehaviorTest.cs" />
+    <Compile Include="ViewModels\Core\PropertyBehaviors\ViewModelFactoryBehaviorTests.cs" />
     <Compile Include="ViewModels\IntegrationTests\ManualUpdateTest.cs" />
     <Compile Include="ViewModels\PersonVM.cs" />
     <Compile Include="ViewModels\TypeDescriptorTest.cs" />
